--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="/src/app.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rick and Mortyn</title>
+    <title>Star Wars API</title>
 
   </head>
   <body style="background-image: url('./src/img/istockphoto-1370213419-640x640.jpg'); background-repeat: no-repeat;background-size:cover;background-attachment: fixed;height:100%; " >
-    <img style="width: 340px; margin-left: 510px;" src="./src/img/602bb8655c5b2300043add95.png" alt="">
     <div id="root"></div>
     
     <script type="module" src="/src/main.jsx"></script>
